--- a/apps/workspace-ui/src/index.html
+++ b/apps/workspace-ui/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <app-root></app-root>
+    <agamis-ws-root></agamis-ws-root>
   </body>
 </html>
